# albs-provenance-explorer

./: .gitignore  AGENTS.md  CLAUDE.md  ChangeLog.txt  README.md  example--almalinux-native.sh  example--almalinux.sh  example--full.sh  example--tour.sh  example--verbose.sh  example.sh  pyproject.toml  run.sh
.github/workflows/: codeql.yml  python-app.yml  scorecard.yml
albs_graph/: errata_adapter.py  export.py  fixtures.py  graph.py  mock_data.py  nevra.py  pipeline.py  rpm_adapter.py  sbom_adapter.py  store.py  vercmp.py
albs_graph/adapters/: __init__.py  _http_cache.py  albs.py  arch_builder.py  cas.py  dnf.py  elf.py  errata.py  errata_source.py  git_source.py  package_info.py  pylang.py  rpm.py  rpm_header.py  rpm_payload.py  rpm_remote.py  rpmgraph.py  rpmsig.py  sbom.py  source.py  source_imports.py
albs_graph/cli/: __init__.py  demo_verbose.py  fetch.py  inspect.py  main.py  render.py  trust.py
albs_graph/dependency/: __init__.py  analyzer.py  model.py  native_resolvers.py  resolver.py
albs_graph/examples/: mock_build.json  synthetic_build.json
albs_graph/gui/: __init__.py  __main__.py  about.py  ansi.py  cve_details.py  dependency_panel.py  entry.py  filtered_table.py  git_commit.py  hitmap.py  inspect.py  package_info.py  qt_app.py  render.py  security_panel.py  timeline_panel.py  universe_panel.py
docs/: decisions.md  limitations.md  next_goals_options.md  plan-pyqt5-investigation-workbench-app.md  plan-pyqt5-investigation-workbench-app_deprecated-301.md  plan-pyqt5-investigation-workbench-app_deprecated-398.md  plan.md  tests.md
examples/: build-57810.cyclonedx.json  nginx-core.cyclonedx.json  openssl_graph.dot  openssl_graph.json  openssl_summary.txt
scripts/: check-test-count.sh
tests/: conftest.py  synthetic_binaries.py  test_albs_cache.py  test_albs_metadata.py  test_arch_builder.py  test_arch_universe.py  test_artifact_inventory.py  test_build_analysis.py  test_build_catalog.py  test_cas.py  test_cli_help.py  test_coverage.py  test_cpe.py  test_cve_details.py  test_cve_feed.py  test_demo_wrapper.py  test_dependency_model.py  test_dnf.py  test_elf.py  test_errata.py  test_errata_source.py  test_fixture_pipeline.py  test_git_source.py  test_graph_model.py  test_gui_ansi.py  test_gui_entry.py  test_gui_hitmap.py  test_gui_inspect.py  test_gui_qt_app.py  test_gui_render.py  test_http_cache.py  test_identify.py  test_license.py  test_live_feeds.py  test_mock_pipeline.py  test_multi_build.py  test_native_resolvers.py  test_nevra.py  test_package_info.py  test_patch.py  (+24 more)
(+55 files in other folders)
